# focus

./: .gitignore  CLAUDE.md  FOCUS-SPEC.md  README.md  SESSION-HANDOFF.md  SETUP.md  USAGE.md  pyproject.toml  requirements.txt  schema.sql
docs/: ARCHITECTURE.md  CLAUDE-MD-DESIGN.md  CONTEXT-SYSTEM.md  CONVENTIONS.md  DECISIONS.md  FEATURES.md  IDEAS.md  PITFALLS.md  ROADMAP.md  TESTING.md
src/: config.py  daemon.py  priority.py
src/api/: routes.py
src/cli/: account.py  context_cmd.py  generate.py  hooks_cmd.py  main.py  priority_cmd.py  project.py  record_cmd.py  retrieve_cmd.py  skill_cmd.py  sprint_cmd.py  sync_cmd.py  task_cmd.py  worker_cmd.py
src/context/: classifier.py  formatter.py  project_state.py  recorder.py  retriever.py  worker.py
src/ingestion/: accounts.py  claude_code.py  drive.py  gmail.py  (+2 more)
tests/: conftest.py  test_api.py  test_artifact_extractor.py  test_classifier_parsing.py  test_claude_code.py  test_claude_md.py  test_config.py  test_context_e2e.py  test_drive.py  test_extractor_parsing.py  test_formatter.py  test_hooks_cmd.py  test_hooks_install.py  test_imessage.py  test_jobs.py  test_parse_turns.py  test_pipeline.py  test_priority.py  test_project_state.py  test_prompt_classifier.py  test_recorder.py  test_regex_parser.py  test_resolver_pure.py  test_retrieve_hook.py  test_retriever.py  test_search_conversations.py  test_skill_analyzer.py  test_skill_cmd.py  test_skill_context.py  test_skill_generator.py  test_skill_installer.py  test_skill_registry.py  test_vectors.py  test_worker.py
web/: index.html  package-lock.json  package.json
(+29 files in other folders)
